change in on boarding

--- a/full_care_user/assets/language/ar.json
+++ b/full_care_user/assets/language/ar.json
@@ -8,7 +8,7 @@
   "on_boarding_3_title": "تسليم سريع",
   "on_boarding_1_description": "حدد موقعك لرؤية مكاتب التمريض واسعة النطاق واطلب العنصر الذي تريده.",
   "on_boarding_2_description": "اطلب العنصر باستخدام الدفع عند الاستلام أو الدفع عن طريق بوابة دفع أكثر أمانًا وأسرع.",
-  "on_boarding_3_description": "المئات من رجال التوصيل ينتظرون طلبك. لذا قم بتقديم طلبك واحصل على المنتج الذي يتم توصيله إلى باب منزلك!",
+  "on_boarding_3_description": "المئات من الممرضين ينتظرون طلبك. لذا قم بتقديم طلبك واحصل على المنتج الذي يتم توصيله إلى باب منزلك!",
   "skip": "يتخطى",
   "next": "التالي",
   "get_started": "ابدأ",
