--- a/full_care_user/assets/language/ar.json
+++ b/full_care_user/assets/language/ar.json
@@ -46,21 +46,21 @@
   "pick_an_address": "اختر عنوانًا",
   "choose_your_interests": "اختر \nاهتماماتك",
   "get_personalized_recommendations": "احصل على توصيات العناصر المخصصة",
-  "search_food_or_restaurant": "ابحث عن الأطعمة أو المطاعم التي تريدها",
+  "search_food_or_restaurant": "ابحث هنا",
   "search_item_or_store": "ابحث عن العناصر أو مكاتب التمريض المطلوبة",
   "categories": "فئات",
   "popular_items_nearby": "العناصر الشعبية القريبة",
-  "restaurants": "مطاعم",
+  "restaurants": "مكاتب التمريض",
   "stores": "متاجر",
-  "all_restaurants": "جميع المطاعم",
+  "all_restaurants": "جميع مكاتب التمريض",
   "all_stores": "جميع مكاتب التمريض",
   "please_enter_mobile": "يرجى إدخال رقم هاتفك المحمول المسجل حتى نتمكن من مساعدتك في استعادة كلمة المرور الخاصة بك.",
   "done": "منتهي",
   "enter_new_password": "أدخل كلمة المرور الجديدة وقم بتأكيد كلمة المرور.",
   "new_password": "كلمة المرور الجديدة",
   "reset_password": "إعادة تعيين كلمة المرور",
-  "cancel": "يلغي",
-  "history": "تاريخ",
+  "cancel": "الغاء",
+"history": "السجل",
   "clear_all": "مسح الكل",
   "suggestions": "اقتراحات",
   "item_name": "اسم العنصر",
@@ -94,7 +94,7 @@
   "my_cart": "سلة التسوق الخاصة بي",
   "removed_from_cart": "تمت إزالتها من سلة التسوق",
   "enter_promo_code": "أدخل الرمز الترويجي",
-  "apply": "يتقدم",
+  "apply": "تطبيق",
   "delivery_option": "خيار التسليم",
   "home_delivery": "توصيل الطلبات للمنازل",
   "take_away": "يسلب",
@@ -105,10 +105,10 @@
   "coupon_discount": "خصم القسيمة",
   "delivery_fee": "رسوم التوصيل",
   "deliver_to": "تسليم إلى",
-  "place_order": "وضع النظام",
-  "favorite": "مفضل",
+  "place_order": "تأكيد الطلب",
+  "favorite": "المفضله",
   "my_orders": "طلباتي",
-  "running": "جري",
+"running": "قيد التنفيذ",
   "order_id": "معرف الطلب",
   "details": "تفاصيل",
   "track_order": "تتبع الطلب",
@@ -151,7 +151,7 @@
   "my_address": "عنواني",
   "saved_address": "العنوان المحفوظ",
   "add_new_address": "إضافة عنوان جديد",
-  "home": "بيت",
+  "home": "الرئيسيه",
   "office": "مكتب",
   "others": "آحرون",
   "delivery_address": "عنوان التسليم",
@@ -164,7 +164,7 @@
   "are_you_sure_to_reset": "هل أنت متأكد أنك تريد إعادة التعيين؟",
   "if_you_change_location": "لديك بعض العناصر في سلة التسوق الخاصة بك. إذا قمت بتغيير موقعك، فسيتم إعادة تعيين سلة التسوق الخاصة بك والبيانات الأخرى المتعلقة بموقع التسليم الحالي الخاص بك.",
   "if_you_change_category": "لديك بعض العناصر في سلة التسوق الخاصة بك. إذا قمت بتغيير الوحدة الخاصة بك، فسيتم إعادة تعيين سلة التسوق الخاصة بك والبيانات الأخرى المتعلقة بالوحدة الحالية الخاصة بك.",
-  "if_you_continue": "لديك عنصر من مطعم آخر في سلة التسوق. إذا تابعت، ستتم إزالة كل العناصر السابقة من سلة التسوق.",
+  "if_you_continue": "لديك عنصر من مكتب التمريض آخر في سلة التسوق. إذا تابعت، ستتم إزالة كل العناصر السابقة من سلة التسوق.",
   "if_you_continue_without_another_store": "إذا كنت تريد تغيير نوع المتجر، فسيتم إعادة تعيين سلة التسوق الخاصة بك وبيانات ذاكرة التخزين المؤقت الأخرى ذات الصلة.",
   "yes_and_continue": "نعم واستمر",
   "total_order": "إجمالي الطلب",
@@ -187,7 +187,7 @@
   "your_order_is_failed_to_place_because": "فشل طلبك بسبب فشل عملية الدفع. يرجى التأكد من الدفع الناجح لتقديم الطلب.",
   "your_order_is_placed_successfully": "تم تقديم طلبك بنجاح. نبدأ عملية التسليم وسوف تتلقى البند الخاص بك قريبا.",
   "order_racking": "تتبع الطلب",
-  "delivery_man": "رجل التسليم",
+  "delivery_man": "ممرض/ة",
   "order_placed": "تم تقديم الطلب",
   "order_confirmed": "تم تأكيد الطلب",
   "preparing_item": "تحضير السلعة",
@@ -195,16 +195,16 @@
   "view_on_map": "عرض على الخريطة",
   "back_to_home": "العودة إلى المنزل",
   "trip_route": "طريق الرحلة",
-  "call": "يتصل",
+  "call": "اتصل",
   "order_details": "تفاصيل الطلب",
   "rate_and_review": "معدل ومراجعة",
   "rate_the_item": "قيم العنصر",
-  "rate_the_delivery_man": "قيم رجل التسليم",
+  "rate_the_delivery_man": "قيم ممرض/ة",
   "share_your_opinion": "شارك برأيك",
   "write_your_review_here": "أكتب رأيك هنا....",
   "submit": "يُقدِّم",
   "verification_code": "رمز التحقق",
-  "item": "غرض",
+  "item": "الصنف",
   "review_now": "قم بالمراجعة الآن",
   "digital_payment": "الدفع الرقمي",
   "cash_on_delivery": "الدفع عند الاستلام",
@@ -246,7 +246,7 @@
   "processing": "يعالج",
   "confirmed": "مؤكد",
   "handover": "التسليم",
-  "picked_up": "التقطت",
+"picked_up": "تم الاستلام",
   "delivered": "تم التوصيل",
   "refund_requested": "طلب استرداد الأموال",
   "refunded": "ردها",
@@ -270,8 +270,8 @@
   "closed_now": "مغلق الآن",
   "are_you_sure_to_cancel": "هل أنت متأكد أنك تريد إلغاء هذا الطلب؟",
   "if_you_exit_from_payment": "إذا خرجت من عملية الدفع هذه، فسيتم فشل طلبك.",
-  "favourite": "مفضل",
-  "menu": "قائمة طعام",
+  "favourite": "المفضله",
+  "menu": "المزيد",
   "continue_as": "الاستمرار كما",
   "save_and_continue": "حفظ ومتابعة",
   "pick_location": "اختر الموقع",
@@ -289,14 +289,14 @@
   "additional_note": "ملاحظة إضافية",
   "no_suggestions_available": "لا توجد اقتراحات متاحة",
   "delivery_verification_code": "رمز التحقق من التسليم",
-  "variations": "الاختلافات",
-  "restaurant_details": "تفاصيل المطعم",
+"variations": "الاختيارات المتاحة",
+  "restaurant_details": "تفاصيل مكتب التمريض",
   "store_details": "تفاصيل المتجر",
   "direction": "اتجاه",
-  "restaurant_is_closed_now": "المطعم مغلق الآن",
+  "restaurant_is_closed_now": "مكتب التمريض مغلق الآن",
   "store_is_closed_now": "المتجر مغلق الآن",
   "km": "كم",
-  "restaurant": "مطعم",
+  "restaurant": "مكتب التمريض",
   "store": "محل",
   "back_press_again_to_exit": "اضغط مرة أخرى للخروج",
   "no_saved_address_found": "لم يتم العثور على عنوان محفوظ",
@@ -321,17 +321,17 @@
   "close": "يغلق",
   "settings": "إعدادات",
   "service_not_available_in_current_location": "الخدمة غير متوفرة في موقعك الحالي",
-  "currently_opened_restaurants": "المطاعم المفتوحة حاليا",
+  "currently_opened_restaurants": "مكاتب التمريض المفتوحة حاليا",
   "currently_opened_stores": "مكاتب التمريض المفتوحة حاليا",
   "discounted_restaurants": "مطاعم مخفضة",
   "discounted_stores": "متاجر مخفضة",
   "the_minimum_item_purchase_amount_for_this_coupon_is": "الحد الأدنى لمبلغ الشراء لهذه القسيمة هو",
   "but_you_have": "ولكن لديك",
   "non_changeable": "غير قابلة للتغيير",
-  "delivery_man_not_assigned": "لم يتم تعيين رجل التوصيل بعد",
+  "delivery_man_not_assigned": "لم يتم تعيين ممرض/ة بعد",
   "payment": "قسط",
   "scheduled_at": "المقرر في",
-  "address": "عنوان",
+  "address": "العنوان",
   "unable_to_launch_google_map": "غير قادر على تشغيل خريطة جوجل",
   "connected": "متصل",
   "no_connection": "لا يوجد اتصال بالإنترنت",
@@ -345,10 +345,10 @@
   "profile_updated_successfully": "تم تحديث الملف الشخصي بنجاح",
   "password_updated_successfully": "تم تحديث كلمة المرور بنجاح",
   "new_address_added_successfully": "تمت إضافة العنوان الجديد بنجاح",
-  "restaurant_reviews": "تقييمات المطاعم",
+  "restaurant_reviews": "تقييمات مكاتب التمريض",
   "store_reviews": "تقييمات المتجر",
-  "popular_restaurants": "مطاعم شعبية",
-  "popular_stores": "مكاتب التمريض الشعبية",
+  "popular_Nurse_Office": "مطاعم شعبية",
+  "popular_stores": "مكاتب التمريض المعروفه",
   "new_on": "جديد على",
   "restaurant_is_closed": "المطعم مغلق",
   "store_is_closed": "المتجر مغلق",
@@ -357,28 +357,28 @@
   "delivery_time": "موعد التسليم",
   "minimum_order": "الحد الأدنى لمبلغ الطلب",
   "best_reviewed_item": "أفضل العناصر التي تمت مراجعتها",
-  "search": "يبحث",
+  "search": "بحث",
   "no_internet_connection": "لا يوجد اتصال بالإنترنت",
   "retry": "أعد المحاولة",
   "update_address": "تحديث العنوان",
-  "add": "يضيف",
-  "your_selected_location_is_from_different_zone": "الموقع الذي اخترته خارج نطاق تغطية هذا المطعم",
+  "add": "اضافه",
+  "your_selected_location_is_from_different_zone": "الموقع الذي اخترته خارج نطاق تغطية هذا مكتب التمريض",
   "your_selected_location_is_from_different_zone_store": "الموقع الذي اخترته خارج نطاق التغطية لهذا المتجر",
   "veg": "نباتي",
   "non_veg": "غير نباتي",
-  "no_category_restaurant_found": "لم يتم العثور على أي مطعم من فئة",
+  "no_category_restaurant_found": "لم يتم العثور على أي مكتب التمريض من فئة",
   "no_category_store_found": "لم يتم العثور على متجر فئة",
   "social_login": "تسجيل الدخول الاجتماعي",
   "type": "يكتب",
-  "restaurant_wise": "مطعم الحكيم",
+"restaurant_wise": "تصنيف حسب مكتب التمريض",
   "store_wise": "متجر الحكمة",
   "zone_wise": "المنطقة الحكيمة",
   "default": "تقصير",
   "min_purchase": "الحد الأدنى للشراء",
   "max_discount": "ماكس الخصم",
   "coupon_code_copied": "تم نسخ رمز القسيمة",
-  "join_as_a_delivery_man": "انضم كرجل توصيل",
-  "join_as_a_restaurant": "انضم كمطعم",
+  "join_as_a_delivery_man": "انضم ك ممرض/ة",
+  "join_as_a_restaurant": "انضم مكتب تمريض",
   "join_as_a_store": "انضم كمتجر",
   "are_you_sure_want_to_delete_address": "هل أنت متأكد أنك تريد حذف العنوان",
   "join_us": "انضم إلينا",
@@ -464,13 +464,13 @@
   "excellent_shopping_experience": "تجربة تسوق ممتازة",
   "easy_checkout_and_payment_system": "سهولة الخروج ونظام الدفع",
   "become_a_seller": "كن بائعًا",
-  "become_a_delivery_man": "كن رجل التوصيل",
+  "become_a_delivery_man": "كن ممرض/ة",
   "register_as_seller_and_open_shop_in": "سجل كبائع وافتح متجرًا في",
   "to_start_your_business": "لبدء عملك",
   "explore_more": "اكتشف المزيد",
   "pick_from_map": "اختر من الخريطة",
   "register": "يسجل",
-  "register_as_delivery_man_and_earn_money": "سجل كرجل توصيل واكسب المال",
+  "register_as_delivery_man_and_earn_money": "سجل  كممرض/ة توصيل واكسب المال",
   "version_1.4": "الإصدار 1.4",
   "street_number": "رقم الشارع",
   "house": "منزل",
@@ -494,14 +494,14 @@
   "delete_account": "حذف الحساب",
   "are_you_sure_to_delete_account": "هل أنت متأكد من حذف حسابك؟",
   "it_will_remove_your_all_information": "وسوف يزيل جميع المعلومات الخاصة بك.",
-  "no_restaurant_data_found": "لم يتم العثور على بيانات المطعم",
+  "no_restaurant_data_found": "لم يتم العثور على بيانات مكتب التمريض",
   "loyalty_points": "نقاط الولاء",
   "wallet_amount": "مبلغ المحفظة",
   "convert_to_currency": "تحويل إلى العملة",
   "transaction_history": "تاريخ المعاملات",
   "pay_from_your_existing_balance": "ادفع من رصيدك الحالي",
   "wallet_payment": "الدفع بالمحفظة",
-  "delivery_man_tips": "نصائح رجل التسليم ",
+  "delivery_man_tips": "نصائح ممرض/ة",
   "enter_amount": "أدخل المبلغ..",
   "refer_and_earn": "الرجوع وكسب",
   "earn_money_on_every_referral": "كسب المال على كل إحالة",
@@ -536,7 +536,7 @@
   "write_somethings": "اكتب شيئا",
   "version_5.8": "الإصدار 5.8",
   "write_something": "أكتب شيئا...",
-  "live_chat": "الدردشة الحية",
+"live_chat": "تحدث معنا الآن",
   "chat": "محادثة",
   "whatsapp": "واتس اب",
   "store_name": "اسم المتجر",
@@ -563,16 +563,16 @@
   "login_information": "معلومات تسجيل الدخول",
   "latitude": "خط العرض",
   "longitude": "خط الطول",
-  "add_delivery_man": "إضافة رجل التسليم",
-  "enter_delivery_man_first_name": "أدخل الاسم الأول لرجل التوصيل",
-  "enter_delivery_man_last_name": "أدخل الاسم الأخير لرجل التوصيل",
-  "enter_delivery_man_email_address": "أدخل عنوان البريد الإلكتروني لرجل التسليم",
-  "enter_delivery_man_phone_number": "أدخل رقم هاتف رجل التوصيل",
+  "add_delivery_man": "إضافة ممرض/ة",
+  "enter_delivery_man_first_name": "أدخل الاسم الأول لممرض/ة",
+  "enter_delivery_man_last_name": "أدخل الاسم الأخير لممرض/ة",
+  "enter_delivery_man_email_address": "أدخل عنوان البريد الإلكتروني لممرض/ة",
+  "enter_delivery_man_phone_number": "أدخل رقم هاتف ممرض/ة",
   "enter_a_valid_phone_number": "أدخل رقم هاتف صالحًا",
-  "enter_password_for_delivery_man": "أدخل كلمة المرور لرجل التسليم",
-  "enter_delivery_man_identity_number": "أدخل رقم هوية رجل التوصيل",
-  "upload_delivery_man_image": "تحميل صورة رجل التسليم",
-  "delivery_man_registration_successful": "تم تسجيل رجل التوصيل بنجاح",
+  "enter_password_for_delivery_man": "أدخل كلمة المرور لممرض/ة",
+  "enter_delivery_man_identity_number": "أدخل رقم هوية ممرض/ة",
+  "upload_delivery_man_image": "تحميل صورة ممرض/ة",
+  "delivery_man_registration_successful": "تم تسجيل ممرض/ة بنجاح",
   "store_registration_successful": "تم تسجيل المتجر بنجاح",
   "passport": "جواز سفر",
   "driving_license": "رخصة القيادة",
@@ -580,10 +580,10 @@
   "identity_type": "نوع الهوية",
   "identity_number": "رقم الهوية",
   "enter_identity_number": "أدخل رقم الهوية",
-  "delivery_man_image": "صورة رجل التسليم",
+  "delivery_man_image": "صورة ممرض/ة",
   "identity_images": "صور الهوية",
-  "delivery_man_registration": "تسجيل رجل التسليم",
-  "delivery_man_type": "نوع رجل التسليم",
+  "delivery_man_registration": "تسجيل ممرض/ة",
+  "delivery_man_type": "نوع ممرض/ة",
   "freelancer": "مستقل",
   "salary_based": "على أساس الراتب",
   "find_nearby_store_near_you": "البحث عن مكان قريب \nمتجر قريب منك",
@@ -757,7 +757,7 @@
   "outside_of_city": "خارج المدينة",
   "no_trip_found": "لم يتم العثور على رحلة",
   "recommended_items": "العناصر الموصى بها",
-  "please_select_vehicle_for_the_deliveryman": "الرجاء اختيار مركبة لرجل التوصيل",
+  "please_select_vehicle_for_the_deliveryman": "الرجاء اختيار مركبة لممرض/ة",
   "vehicle_type": "نوع المركبة",
   "select_cancellation_reasons": "حدد أسباب الإلغاء",
   "no_reasons_available": "لا توجد أسباب متاحة",
@@ -783,7 +783,7 @@
   "my_wallet": "محفظتي",
   "earnings": "الأرباح",
   "open_store": "افتح المتجر",
-  "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة رجل التسليم",
+  "complete_registration_process_to_serve_as_delivery_man": "استكمال عملية التسجيل ليكون بمثابة ممرض/ة",
   "upload_deliveryman_photo": "تحميل صورة \nموظف التوصيل",
   "select_vehicle_type": "اختر نوع المركبة",
   "upload_identity_image": "تحميل صورة الهوية",
@@ -793,14 +793,14 @@
   "1_lower_case": "1 حالة صغيرة",
   "1_special_character": "1 شخصية خاصة",
   "provide_valid_password": "توفير كلمة مرور صالحة",
-  "pick_delivery_man_profile_image": "اختر الصورة الشخصية لرجل التوصيل",
+  "pick_delivery_man_profile_image": "اختر الصورة الشخصية لممرض/ة",
   "provide_store_information_to_proceed_next": "قم بتوفير معلومات المتجر للمتابعة بعد ذلك",
   "upload_store_logo": "تحميل شعار المتجر",
   "upload_store_cover": "تحميل غلاف المتجر",
   "provide_owner_information_to_confirm": "تقديم معلومات المالك للتأكيد!",
   "please_add_your_address_for_your_better_experience": "الرجاء إضافة عنوانك\nلتجربة أفضل",
   "level_name": "اسم المستوى",
-  "delete": "يمسح",
+  "delete": "مسح",
   "are_you_sure": "هل أنت متأكد؟",
   "you_want_to_delete_this_location": "هل تريد حذف هذا الموقع؟",
   "and_up_to": "& يصل إلى",
@@ -808,8 +808,8 @@
   "more_option": "أكثر",
   "add_more_items": "إضافة المزيد من العناصر",
   "you_may_also_like": "قد يعجبك أيضًا!",
-  "add_cutlery": "أضف أدوات المائدة",
-  "do_not_have_cutlery": "ليس لديك أدوات المائدة؟ سيوفر لك المطعم.",
+  "add_cutlery": "أضف أدوات طبية",
+  "do_not_have_cutlery": "ليس لديك أدوات طبية؟ سيوفر لك مكتب التمريض.",
   "if_any_product_is_not_available": "إذا كان أي منتج غير متوفر",
   "more_for_free_delivery": "المزيد للتوصيل المجاني",
   "on": "على",
@@ -823,7 +823,7 @@
   "add_more_delivery_instruction": "إضافة المزيد من تعليمات التسليم",
   "it_s_a_great_way_to_show_your_appreciation_for_their_hard_work": "إنها طريقة رائعة لإظهار تقديرك لعملهم الشاق",
   "schedule_time_tool_tip": "يمكنك الطلب على الفور أو يمكنك أيضًا الطلب عن طريق جدولة الوقت",
-  "your_food_will_delivered_within": "سيتم تسليم طعامك في الداخل",
+  "your_food_will_delivered_within": "سيتم تسليم طلبك ",
   "general_info": "معلومات عامة",
   "order_date": "تاريخ الطلب",
   "item_info": "معلومات العنصر",
@@ -849,12 +849,12 @@
   "enter_refer_code": "أدخل رمز الإحالة",
   "general_information": "معلومات عامة",
   "login_info": "معلومات تسجيل الدخول",
-  "cutlery": "أدوات المائدة",
-  "need_cutlery": "بحاجة إلى أدوات المائدة",
-  "no_need_cutlery": "لا حاجة لأدوات المائدة",
+  "cutlery": "أدوات طبية",
+  "need_cutlery": "بحاجة إلى أدوات طبية",
+  "no_need_cutlery": "لا حاجة لأدوات طبية",
   "delivery_instruction": "تعليمات التسليم",
   "unavailable_item_note": "ملاحظة العنصر غير متوفر",
-  "delivery_man_information": "معلومات رجل التسليم",
+  "delivery_man_information": "معلومات ممرض/ة",
   "points_it_will_add_to": "النقاط، ستضيف إلى ولائك بعد إكمال الطلب",
   "6_character": "8+ حرف",
   "your_privacy_matters": "مسائل الخصوصية الخاصة بك",
@@ -889,7 +889,7 @@
   "please_select_module_first": "الرجاء تحديد الوحدة أولاً",
   "please_select_zone": "الرجاء تحديد المنطقة",
   "delivery_details": "تفاصيل التسليم",
-  "delivery_man_details": "تفاصيل رجل التسليم",
+  "delivery_man_details": "تفاصيل الممرض/ة",
   "from_store": "من المتجر",
   "cash": "نقدي",
   "digital": "رقمي",
@@ -952,7 +952,7 @@
   "code_copied": "تم نسخ الكود!",
   "join_as_store": "انضم كمتجر",
   "cover_image": "صورة الغلاف",
-  "join_as_delivery_man": "انضم كرجل توصيل",
+  "join_as_delivery_man": "انضم كممرض/ة ",
   "most_tipped": "الأكثر يميل",
   "click_one_of_the_option_below": "(انقر فوق أحد الخيارات أدناه)",
   "pay_via_online": "الدفع عبر الإنترنت",
@@ -1005,13 +1005,13 @@
   "add_payment_method": "أضف طريقة الدفع",
   "how_to_use": "كيفية الاستخدام",
   "messages": "رسائل",
-  "search_": "يبحث...",
+  "search_": "بحث...",
   "start_a_new_message": "ابدأ رسالة جديدة",
   "no_conversation_selected": "لم يتم تحديد أي محادثة",
   "please_enter_the_delivery_address": "الرجاء إدخال عنوان التسليم",
   "please_enter_the_contact_person_name": "الرجاء إدخال اسم جهة الاتصال",
   "please_enter_the_phone_number": "الرجاء إدخال رقم الهاتف",
-  "select": "يختار",
+  "select": "اختر",
   "you_can_not_add_zero_amount_in_wallet": "لا يمكنك إضافة مبلغ صفر إلى المحفظة",
   "special_offers": "عروض خاصة",
   "due_amount": "المبلغ المستحق",
@@ -1048,12 +1048,12 @@
   "your_order": "طلبك",
   "order_accepted": "تم قبول الطلب",
   "order_is_on_the_way": "الطلب في الطريق",
-  "your_delivery_man_is_coming": "رجل التسليم الخاص بك قادم",
+  "your_delivery_man_is_coming": "ممرض/ةالخاص بك قادم",
   "order_delivered": "تم تسليم الطلب",
   "bringing_happiness_from_door_to_door": "جلب السعادة من الباب إلى الباب",
   "ready_to_send_something_special": "على استعداد لإرسال شيء خاص؟",
   "easiest_way_to_get_services": "أسهل طريقة للحصول على الخدمات",
-  "orders": "طلبات",
+  "orders": "الطلبات",
   "visit_again": "قم بالزيارة مرة أخرى",
   "get_your_recent_purchase_from_the_shop_you_recently_visited": "احصل على مشترياتك الأخيرة من المتجر الذي قمت بزيارته مؤخرًا",
   "special_offer": "عرض خاص",
@@ -1079,13 +1079,13 @@
   "woman_care": "رعاية النساء",
   "mens": "مِلك الرجال",
   "featured_store": "متجر مميز",
-  "visit": "يزور",
+  "visit": "زياره",
   "common_condition": "حالة مشتركة",
   "cough_cold_flue": "السعال والبرد والانفلونزا",
   "diabetes": "السكري",
   "eye_ear": "العين والأذن",
   "recommended_stores": "مكاتب التمريض الموصى بها!",
-  "recommended_restaurants": "المطاعم الموصى بها!",
+  "recommended_restaurants": "مكاتب التمريض الموصى بها!",
   "see_all": "رؤية الكل",
   "best_reviewed_products": "أفضل المنتجات التي تمت مراجعتها",
   "featured_categories": "الفئات المميزة",
@@ -1114,7 +1114,7 @@
   "offline_payment_note_line_three": "أدخل المعلومات وتابع",
   "please_enter_order_id": "الرجاء إدخال معرف الطلب",
   "currently_no_recommended_store_available": "حاليا لا يوجد متجر موصى به متاح",
-  "currently_no_recommended_restaurant_available": "حاليا لا يوجد مطعم موصى به متاح",
+  "currently_no_recommended_restaurant_available": "حاليا لا يوجد مكتب تمريض موصى به متاح",
   "min_order_of": "الحد الأدنى للطلب",
   "store_list": "قائمة المتجر",
   "please_wait_until_refresh_complete": "الرجاء الانتظار حتى اكتمال التحديث",
@@ -1256,7 +1256,7 @@
   "and_bad_weather_charge": "ورسوم الطقس السيئ",
   "popular_categories": "الفئات الشعبية",
   "no_category_available": "لا توجد فئات متاحة",
-  "restaurants_near_you": "المطاعم القريبة منك",
+  "restaurants_near_you": "مكاتب التمريض القريبة منك",
   "stores_near_you": "مكاتب التمريض القريبة منك",
   "open_at": "مفتوح عند",
   "newly_joined": "انضم حديثا",
