--- a/full_care_user/assets/language/en.json
+++ b/full_care_user/assets/language/en.json
@@ -8,7 +8,7 @@
   "on_boarding_3_title": "Fast Delivery",
   "on_boarding_1_description": "Select your location to see the wide range stores and order your desired item.",
   "on_boarding_2_description": "Order item with COD payment or pay by safer and faster payment gateway.",
-  "on_boarding_3_description": "Hundreds of delivery man are waiting for your order. So place your order and get the item delivered to your doorstep!",
+  "on_boarding_3_description": "Hundreds of Nurses are waiting for your order. So place your order and get the item delivered to your doorstep!",
   "skip": "Skip",
   "next": "Next",
   "get_started": "Get Started",
@@ -46,13 +46,13 @@
   "pick_an_address": "Pick an address",
   "choose_your_interests": "Choose \nYour Interests",
   "get_personalized_recommendations": "Get personalized item recommendations",
-  "search_food_or_restaurant": "Search your desired foods or restaurants",
+  "search_food_or_restaurant": "Search your desired Nurse Office",
   "search_item_or_store": "Search your desired items or stores",
   "categories": "Categories",
   "popular_items_nearby": "Popular Items Nearby",
-  "restaurants": "Restaurants",
+  "restaurants": "Nurse Office",
   "stores": "Stores",
-  "all_restaurants": "All Restaurants",
+  "all_restaurants": "All Nurse Offices",
   "all_stores": "All Stores",
   "please_enter_mobile": "Please enter your registered Mobile Number so that we can help you to recover your password.",
   "done": "Done",
@@ -164,7 +164,7 @@
   "are_you_sure_to_reset": "Are you sure want to reset?",
   "if_you_change_location": "You have some items in your cart. If you change your location, your cart and other data related to your current delivery location will be reset.",
   "if_you_change_category": "You have some items in your cart. If you change your module, your cart and other data related to your current module will be reset.",
-  "if_you_continue": "You have item from another restaurant in cart. If you continue, your all previous item from cart will be removed.",
+  "if_you_continue": "You have item from another Nurse Office in cart. If you continue, your all previous item from cart will be removed.",
   "if_you_continue_without_another_store": "If you want to change store type it will reset your cart and other related cache data.",
   "yes_and_continue": "Yes and Continue",
   "total_order": "Total Order",
@@ -187,7 +187,7 @@
   "your_order_is_failed_to_place_because": "Your order is failed to place because your payment got failed. Please make sure a successful payment to place an order.",
   "your_order_is_placed_successfully": "Your order is placed successfully. We start our delivery process and you will receive your item soon.",
   "order_racking": "Order Tracking",
-  "delivery_man": "Delivery Man",
+  "delivery_man": "Nurse",
   "order_placed": "Order Placed",
   "order_confirmed": "Order Confirmed",
   "preparing_item": "Preparing Item",
@@ -199,7 +199,7 @@
   "order_details": "Order Details",
   "rate_and_review": "Rate & Review",
   "rate_the_item": "Rate the Item",
-  "rate_the_delivery_man": "Rate the Delivery Man",
+  "rate_the_delivery_man": "Rate the Nurse",
   "share_your_opinion": "Share Your Opinion",
   "write_your_review_here": "Write your review here....",
   "submit": "Submit",
@@ -290,13 +290,13 @@
   "no_suggestions_available": "No suggestions available",
   "delivery_verification_code": "Delivery Verification Code",
   "variations": "Variations",
-  "restaurant_details": "Restaurant Details",
+  "restaurant_details": "Nursse Office Details",
   "store_details": "Store Details",
   "direction": "Direction",
-  "restaurant_is_closed_now": "Restaurant is closed now",
+  "restaurant_is_closed_now": "Nurse Office is closed now",
   "store_is_closed_now": "Store is closed now",
   "km": "km",
-  "restaurant": "Restaurant",
+  "restaurant": "Nurse Office",
   "store": "Store",
   "back_press_again_to_exit": "Back press again to exit",
   "no_saved_address_found": "No saved address found",
@@ -306,7 +306,7 @@
   "no_wish_data_found": "No favourite data found",
   "no_campaign_found": "No campaign found",
   "no_item_available": "No item available",
-  "no_restaurant_available": "No restaurant available",
+  "no_restaurant_available": "No Nurse Office available",
   "no_store_available": "No store available",
   "no_notification_found": "No notification found",
   "no_order_found": "No order found",
@@ -321,14 +321,14 @@
   "close": "Close",
   "settings": "Settings",
   "service_not_available_in_current_location": "Service not available in your current location",
-  "currently_opened_restaurants": "Currently Opened Restaurants",
+  "currently_opened_restaurants": "Currently Opened Nurse Offices",
   "currently_opened_stores": "Currently Opened Stores",
-  "discounted_restaurants": "Discounted Restaurants",
+  "discounted_restaurants": "Discounted Nurse Offices",
   "discounted_stores": "Discounted Stores",
   "the_minimum_item_purchase_amount_for_this_coupon_is": "The minimum purchase amount for this coupon is",
   "but_you_have": "but you have",
   "non_changeable": "Non changeable",
-  "delivery_man_not_assigned": "Delivery man has not been assigned yet",
+  "delivery_man_not_assigned": "Nurse has not been assigned yet",
   "payment": "Payment",
   "scheduled_at": "Scheduled at",
   "address": "Address",
@@ -345,12 +345,12 @@
   "profile_updated_successfully": "Profile updated successfully",
   "password_updated_successfully": "Password updated successfully",
   "new_address_added_successfully": "New address added successfully",
-  "restaurant_reviews": "Restaurant Reviews",
+  "restaurant_reviews": "Nurse Office Reviews",
   "store_reviews": "Store Reviews",
-  "popular_restaurants": "Popular Restaurants",
+  "popular_Nurse_Office": "Popular Nurse Office",
   "popular_stores": "Popular Stores",
   "new_on": "New on",
-  "restaurant_is_closed": "Restaurant is closed",
+  "restaurant_is_closed": "Nurse Office is closed",
   "store_is_closed": "Store is closed",
   "id": "ID",
   "no_review_found": "No review found",
@@ -362,23 +362,23 @@
   "retry": "Retry",
   "update_address": "Update Address",
   "add": "Add",
-  "your_selected_location_is_from_different_zone": "Your selected location is out of coverage for this restaurant",
+  "your_selected_location_is_from_different_zone": "Your selected location is out of coverage for this Nurse Office",
   "your_selected_location_is_from_different_zone_store": "Your selected location is out of coverage for this store",
   "veg": "Veg",
   "non_veg": "Non-Veg",
-  "no_category_restaurant_found": "No category restaurant found",
+  "no_category_restaurant_found": "No category Nurse Office found",
   "no_category_store_found": "No category store found",
   "social_login": "Social Login",
   "type": "Type",
-  "restaurant_wise": "Restaurant Wise",
+  "restaurant_wise": "Nurse Office Wise",
   "store_wise": "Store Wise",
   "zone_wise": "Zone Wise",
   "default": "Default",
   "min_purchase": "Min Purchase",
   "max_discount": "Max Discount",
   "coupon_code_copied": "Coupon code copied",
-  "join_as_a_delivery_man": "Join as a Delivery Man",
-  "join_as_a_restaurant": "Join as a Restaurant",
+  "join_as_a_delivery_man": "Join as a Nurse",
+  "join_as_a_restaurant": "Join as a Nurse Office",
   "join_as_a_store": "Join as a Store",
   "are_you_sure_want_to_delete_address": "Are you sure want to delete address",
   "join_us": "Join Us",
@@ -464,13 +464,13 @@
   "excellent_shopping_experience": "Excellent Shopping Experience",
   "easy_checkout_and_payment_system": "Easy Checkout & payment system",
   "become_a_seller": "Become a Seller",
-  "become_a_delivery_man": "Become a Delivery Man",
+  "become_a_delivery_man": "Become a Nurse",
   "register_as_seller_and_open_shop_in": "Register as seller and open shop in",
   "to_start_your_business": "to start your business",
   "explore_more": "Explore More",
   "pick_from_map": "Pick From Map",
   "register": "Register",
-  "register_as_delivery_man_and_earn_money": "Register as delivery man and earn money",
+  "register_as_delivery_man_and_earn_money": "Register as nurse and earn money",
   "version_1.4": "Version 1.4",
   "street_number": "Street Number",
   "house": "House",
@@ -494,14 +494,14 @@
   "delete_account": "Delete Account",
   "are_you_sure_to_delete_account": "Are you sure to delete your account?",
   "it_will_remove_your_all_information": "It will remove your all information.",
-  "no_restaurant_data_found": "No restaurant data found",
+  "no_restaurant_data_found": "No Nurse Office data found",
   "loyalty_points": "Loyalty Points",
   "wallet_amount": "Wallet Amount",
   "convert_to_currency": "Convert To Currency",
   "transaction_history": "Transaction History",
   "pay_from_your_existing_balance": "Pay from your existing balance",
   "wallet_payment": "Wallet Payment",
-  "delivery_man_tips": "Delivery Man Tips ",
+  "delivery_man_tips": "Nurse Tips ",
   "enter_amount": "Enter Amount..",
   "refer_and_earn": "Refer & Earn",
   "earn_money_on_every_referral": "Earn money on every referral",
@@ -540,7 +540,7 @@
   "chat": "Chat",
   "whatsapp": "Whatsapp",
   "store_name": "Store Name",
-  "deliveryman_name": "Deliveryman Name",
+  "deliveryman_name": "Nurse Name",
   "conversation_list": "Conversation List",
   "vendor": "Vendor",
   "admin": "Admin",
@@ -563,16 +563,16 @@
   "login_information": "Login Information",
   "latitude": "Latitude",
   "longitude": "Longitude",
-  "add_delivery_man": "Add Delivery Man",
-  "enter_delivery_man_first_name": "Enter delivery man first name",
-  "enter_delivery_man_last_name": "Enter delivery man last name",
-  "enter_delivery_man_email_address": "Enter delivery man email address",
-  "enter_delivery_man_phone_number": "Enter delivery man phone number",
+  "add_delivery_man": "Add Nurse",
+  "enter_delivery_man_first_name": "Enter nurse first name",
+  "enter_delivery_man_last_name": "Enter nurse last name",
+  "enter_delivery_man_email_address": "Enter nurse email address",
+  "enter_delivery_man_phone_number": "Enter nurse phone number",
   "enter_a_valid_phone_number": "Enter a valid phone number",
-  "enter_password_for_delivery_man": "Enter password for delivery man",
-  "enter_delivery_man_identity_number": "Enter delivery man identity number",
-  "upload_delivery_man_image": "Upload delivery man image",
-  "delivery_man_registration_successful": "Delivery man registration successful",
+  "enter_password_for_delivery_man": "Enter password for nurse",
+  "enter_delivery_man_identity_number": "Enter nurse identity number",
+  "upload_delivery_man_image": "Upload nurse image",
+  "delivery_man_registration_successful": "Nurse registration successful",
   "store_registration_successful": "Store registration successful",
   "passport": "Passport",
   "driving_license": "Driving License",
@@ -580,10 +580,10 @@
   "identity_type": "Identity Type",
   "identity_number": "Identity Number",
   "enter_identity_number": "Enter identity number",
-  "delivery_man_image": "Delivery Man Image",
+  "delivery_man_image": "Nurse Image",
   "identity_images": "Identity Images",
-  "delivery_man_registration": "Delivery Man Registration",
-  "delivery_man_type": "Delivery Man Type",
+  "delivery_man_registration": "Nurse Registration",
+  "delivery_man_type": "Nurse Type",
   "freelancer": "Freelancer",
   "salary_based": "Salary Based",
   "find_nearby_store_near_you": "Find Nearby \nStore Near You",
@@ -757,7 +757,7 @@
   "outside_of_city": "Outside of city",
   "no_trip_found": "No trip found",
   "recommended_items": "Recommended Items",
-  "please_select_vehicle_for_the_deliveryman": "Please select vehicle for the deliveryman",
+  "please_select_vehicle_for_the_deliveryman": "Please select vehicle for the Nurse",
   "vehicle_type": "Vehicle Type",
   "select_cancellation_reasons": "Select Cancellation Reasons",
   "no_reasons_available": "No reasons available",
@@ -783,8 +783,8 @@
   "my_wallet": "My Wallet",
   "earnings": "Earnings",
   "open_store": "Open Store",
-  "complete_registration_process_to_serve_as_delivery_man": "Complete registration process to serve as delivery man",
-  "upload_deliveryman_photo": "Upload deliveryman \nphoto",
+  "complete_registration_process_to_serve_as_delivery_man": "Complete registration process to serve as nurse",
+  "upload_deliveryman_photo": "Upload Nurse \nphoto",
   "select_vehicle_type": "Select Vehicle Type",
   "upload_identity_image": "Upload Identity Image",
   "8_or_more_character": "8 or more character",
@@ -793,7 +793,7 @@
   "1_lower_case": "1 lower case",
   "1_special_character": "1 special character",
   "provide_valid_password": "Provide valid password",
-  "pick_delivery_man_profile_image": "Pick delivery man profile image",
+  "pick_delivery_man_profile_image": "Pick nurse profile image",
   "provide_store_information_to_proceed_next": "Provide store information to proceed next",
   "upload_store_logo": "Upload Store Logo",
   "upload_store_cover": "Upload Store Cover",
@@ -823,7 +823,7 @@
   "add_more_delivery_instruction": "Add More Delivery Instruction",
   "it_s_a_great_way_to_show_your_appreciation_for_their_hard_work": "It's a great way to show your appreciation for their hard work",
   "schedule_time_tool_tip": "You can order instantly or you can also order by scheduling the time",
-  "your_food_will_delivered_within": "Your food will delivered within",
+  "your_food_will_delivered_within": "Your order will delivered within",
   "general_info": "General Info",
   "order_date": "Order date",
   "item_info": "Item Info",
@@ -854,7 +854,7 @@
   "no_need_cutlery": "No Need Cutlery",
   "delivery_instruction": "Delivery Instruction",
   "unavailable_item_note": "Unavailable Item Note",
-  "delivery_man_information": "Delivery Man Information",
+  "delivery_man_information": "Nurse Information",
   "points_it_will_add_to": "points, it will add to your loyalty after complete the order",
   "6_character": "8+ character",
   "your_privacy_matters": "Your Privacy Matters",
@@ -889,7 +889,7 @@
   "please_select_module_first": "Please select module first",
   "please_select_zone": "Please select Zone",
   "delivery_details": "Delivery Details",
-  "delivery_man_details": "Delivery Man Details",
+  "delivery_man_details": "Nurse Details",
   "from_store": "From Store",
   "cash": "Cash",
   "digital": "Digital",
@@ -952,7 +952,7 @@
   "code_copied": "Code copied !",
   "join_as_store": "Join as Store",
   "cover_image": "Cover Image",
-  "join_as_delivery_man": "Join as delivery man",
+  "join_as_delivery_man": "Join as nurse",
   "most_tipped": "Most Tipped",
   "click_one_of_the_option_below": "(click one of the option below)",
   "pay_via_online": "Pay Via Online",
@@ -1048,7 +1048,7 @@
   "your_order": "YOUR ORDER",
   "order_accepted": "Order Accepted",
   "order_is_on_the_way": "Order is On the Way",
-  "your_delivery_man_is_coming": "Your delivery man is coming",
+  "your_delivery_man_is_coming": "Your nurse is coming",
   "order_delivered": "Order Delivered",
   "bringing_happiness_from_door_to_door": "Bringing Happiness From Door To Door",
   "ready_to_send_something_special": "Ready to send something special?",
@@ -1085,7 +1085,7 @@
   "diabetes": "Diabetes",
   "eye_ear": "Eye & Ear",
   "recommended_stores": "Recommended Stores !",
-  "recommended_restaurants": "Recommended Restaurants !",
+  "recommended_restaurants": "Recommended Nurse Offices !",
   "see_all": "See All",
   "best_reviewed_products": "Best Reviewed Products",
   "featured_categories": "Featured Categories",
@@ -1114,7 +1114,7 @@
   "offline_payment_note_line_three": "insert the information and proceed",
   "please_enter_order_id": "Please enter order id",
   "currently_no_recommended_store_available": "Currently no recommended store available",
-  "currently_no_recommended_restaurant_available": "Currently no recommended restaurant available",
+  "currently_no_recommended_restaurant_available": "Currently no recommended Nurse Office available",
   "min_order_of": "Min Order of",
   "store_list": "Store List",
   "please_wait_until_refresh_complete": "Please wait until refresh complete",
@@ -1132,7 +1132,7 @@
   "maximum_delivery_time_can_not_be_empty": "Maximum delivery time can not be empty",
   "time_unit_can_not_be_empty": "Time unit can not be empty",
   "please_upload_identity_image": "Please upload identity image",
-  "please_select_deliveryman_type": "Please select deliveryman type",
+  "please_select_deliveryman_type": "Please select Nurse type",
   "welcome_to": "Welcome to",
   "get_ready_for_a_special_welcome_gift_enjoy_a_special_discount_on_your_first_order_within": "Get ready for a special welcome gift, enjoy a special discount on your first order within",
   "months": "months.",
@@ -1209,7 +1209,7 @@
   "store_will_pay": "Store will pay",
   "commission_to": "commission to",
   "from_each_order_You_will_get_access_of_all": "from each order. You will get access of all the features and options in store panel , app and interaction with user.",
-  "run_store_by_purchasing_subscription_packages": "Run restaurant by puchasing subsciption packages. You will have access the features of in restaurant panel , app and interaction with user according to the subscription packages.",
+  "run_store_by_purchasing_subscription_packages": "Run Nurse Office by puchasing subsciption packages. You will have access the features of in Nurse Office panel , app and interaction with user according to the subscription packages.",
   "no_package_available": "No package available",
   "continue_with": "Continue with",
   "days_free_trial": "free trial",
@@ -1256,7 +1256,7 @@
   "and_bad_weather_charge": "and bad weather charge",
   "popular_categories": "Popular Categories",
   "no_category_available": "No Categories Available",
-  "restaurants_near_you": "restaurants near you",
+  "Nurse Office_near_you": "Nurse Office near you",
   "stores_near_you": "stores near you",
   "open_at": "Open at",
   "newly_joined": "Newly joined",
