--- a/full_care_user/assets/language/ar.json
+++ b/full_care_user/assets/language/ar.json
@@ -1,7 +1,7 @@
 {
   "connection_to_api_server_failed": "فشل الاتصال بخادم API بسبب الاتصال بالإنترنت",
   "select_language": "اختر اللغة",
-  "save": "يحفظ",
+  "save": "حفظ",
   "select_a_language": "اختر لغة",
   "on_boarding_1_title": "احصل على العناصر المفضلة",
   "on_boarding_2_title": "سهولة الدفع",
@@ -9,11 +9,11 @@
   "on_boarding_1_description": "حدد موقعك لرؤية مكاتب التمريض واسعة النطاق واطلب العنصر الذي تريده.",
   "on_boarding_2_description": "اطلب العنصر باستخدام الدفع عند الاستلام أو الدفع عن طريق بوابة دفع أكثر أمانًا وأسرع.",
   "on_boarding_3_description": "المئات من الممرضين ينتظرون طلبك. لذا قم بتقديم طلبك واحصل على المنتج الذي يتم توصيله إلى باب منزلك!",
-  "skip": "يتخطى",
+  "skip": "تخطي",
   "next": "التالي",
   "get_started": "ابدأ",
   "sign_in": "تسجيل الدخول",
-  "sign_up": "اشتراك",
+  "sign_up": "انشاء حساب",
   "email": "بريد إلكتروني",
   "password": "كلمة المرور",
   "confirm_password": "تأكيد كلمة المرور",
@@ -97,7 +97,7 @@
   "apply": "تطبيق",
   "delivery_option": "خيار التسليم",
   "home_delivery": "توصيل الطلبات للمنازل",
-  "take_away": "يسلب",
+  "take_away": "استلام من الفرع",
   "item_price": "سعر السلعة",
   "vat_tax": "ضريبة القيمة المضافة/الضريبة",
   "subtotal": "المجموع الفرعي",
